[package]
name = "xavax-snvm-tool"
authors = ["xavax.io"]
description = "A cli-tool that lets you easily create a Subnet or add a Chain to it."
about = "A cli-tool that lets you easily create a Subnet or add a Chain to it."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xavax-avalanche = { path = "xavax-avalanche", features = ["request-api", "crypto-api"]}

tracing = { version = "0.1.29", features = ["log", "log-always"] }
tokio = { version = "1.15.0", features = ["rt", "macros", "rt-multi-thread"]}

console = "0.15.0"

dialoguer = {version = "0.9.0"}